--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -2,20 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<link href="https://fonts.googleapis.com/css?family=Montserrat"
-	rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans"
-	rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
 <link th:href="@{/styles/board.css}" rel="stylesheet" />
 <title>Gomoku Board</title>
-<meta th:name="_csrf" th:content="${_csrf.token}"/>
-<meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
+<meta th:name="_csrf" th:content="${_csrf.token}" />
+<meta th:name="_csrf_header" th:content="${_csrf.headerName}" />
 </head>
 <body>
 	<div th:insert="~{menu}"></div>
@@ -49,8 +42,7 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div style="margin-left: 275px">
-						<span><strong>Evaluation : </strong></span>
-						<span id="evaluationValue"></span>
+						<span><strong>Evaluation : </strong></span> <span id="evaluationValue"></span>
 					</div>
 				</div>
 			</div>
@@ -59,8 +51,7 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<button type="submit" name="reset-game" id="reset-game"
-							class="btn btn-default" title="Reset game">
+						<button type="submit" name="reset-game" id="reset-game" class="btn btn-default" title="Reset game">
 							<em class="fa-solid fa-power-off" style="color: #0d6efd"></em>
 						</button>
 					</div>
@@ -69,8 +60,7 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<button type="submit" name="undo-move" id="undo-move"
-							class="btn btn-default" title="Undo move">
+						<button type="submit" name="undo-move" id="undo-move" class="btn btn-default" title="Undo move">
 							<em class="fas fa-undo" style="color: #0d6efd"></em>
 						</button>
 					</div>
@@ -79,8 +69,7 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<button type="submit" name="undo-move" id="redo-move"
-							class="btn btn-default" title="Redo move">
+						<button type="submit" name="undo-move" id="redo-move" class="btn btn-default" title="Redo move">
 							<em class="fas fa-redo" style="color: #0d6efd"></em>
 						</button>
 					</div>
@@ -89,8 +78,7 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<button type="submit" name="compute-move" id="compute-move"
-							class="btn btn-default" title="Compute move">
+						<button type="submit" name="compute-move" id="compute-move" class="btn btn-default" title="Compute move">
 							<em id="computeIcon" class="fa-solid fas fa-cog fa-spin" style="color: #0d6efd"></em>
 						</button>
 					</div>
@@ -99,8 +87,7 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<button type="submit" name="stop" id="stop"
-							class="btn btn-default" title="Stop" style="outline: none !important">
+						<button type="submit" name="stop" id="stop" class="btn btn-default" title="Stop" style="outline: none !important">
 							<em class="fa-solid fa-stop" style="color: #0d6efd; outline: none !important"></em>
 						</button>
 					</div>
@@ -109,8 +96,8 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<button type="submit" name="lastMove" id="lastMove"
-							class="btn btn-default" title="Last move" style="outline: none !important">
+						<button type="submit" name="lastMove" id="lastMove" class="btn btn-default" title="Last move"
+							style="outline: none !important">
 							<em class="fa-solid fa-question" style="color: #0d6efd; outline: none !important"></em>
 						</button>
 					</div>
@@ -119,8 +106,8 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<button type="submit" name="downloadGame" id="downloadGame"
-							class="btn btn-default" title="Download game" style="outline: none !important">
+						<button type="submit" name="downloadGame" id="downloadGame" class="btn btn-default" title="Download game"
+							style="outline: none !important">
 							<em class="fa-solid fa-download" style="color: #0d6efd; outline: none !important"></em>
 						</button>
 					</div>
@@ -129,8 +116,8 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<button type="submit" name="uploadGame" id="uploadGame"
-							class="btn btn-default" title="Upload game" style="outline: none !important">
+						<button type="submit" name="uploadGame" id="uploadGame" class="btn btn-default" title="Upload game"
+							style="outline: none !important">
 							<em class="fa-solid fa-upload" style="color: #0d6efd; outline: none !important"></em>
 						</button>
 					</div>
@@ -139,16 +126,15 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<button type="submit" name="saveGame" id="saveGame"
-							class="btn btn-default" title="Save game" style="outline: none !important">
+						<button type="submit" name="saveGame" id="saveGame" class="btn btn-default" title="Save game"
+							style="outline: none !important">
 							<em class="fa-solid fa-save" style="color: #0d6efd; outline: none !important"></em>
 						</button>
 					</div>
 				</div>
 			</div>
 			<div class="computeProgress" id="computeProgress1">
-				<div class="minMaxProgressBar" id="progressBar1">
-				</div>
+				<div class="minMaxProgressBar" id="progressBar1"></div>
 			</div>
 		</div>
 	</div>
