--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -4,22 +4,12 @@
 <meta charset="utf-8" />
 <meta name="_csrf" th:content="${_csrf.token}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
-<link href="https://fonts.googleapis.com/css?family=Montserrat"
-	rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans"
-	rel="stylesheet">
-
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
-	<link th:href="@{/styles/history.css}" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link th:href="@{/styles/history.css}" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<link rel="stylesheet" type="text/css"
-	href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
-<script type="text/javascript" charset="utf8"
-	src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <title>Game history</title>
 </head>
@@ -47,7 +37,7 @@
 
 		</div>
 	</div>
-	
+
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 		var username = /*[[${username}]]*/'default';
@@ -56,101 +46,116 @@
 
 	<script type="text/javascript">
 		var table;
-		$(document).ready(function() {
-			table = $('#gameHistoryTable').DataTable({
-				"ajax" : {
-					"url" : "/history/get/" + username,
-					"dataSrc" : ""
+		$(document)
+				.ready(
+						function() {
+							table = $('#gameHistoryTable')
+									.DataTable(
+											{
+												"ajax" : {
+													"url" : "/history/get/"
+															+ username,
+													"dataSrc" : ""
+												},
+												"columns" : [
+														{
+															"data" : "date",
+															"render" : function(
+																	data) {
+																return moment(
+																		data)
+																		.format(
+																				"MM-DD-YYYY HH:mm:ss");
+															}
+														},
+														{
+															"data" : "blackPlayer.username"
+														},
+														{
+															"data" : "whitePlayer.username"
+														},
+														{
+															"data" : "winner.username",
+															"render" : function(
+																	data, type,
+																	row) {
+																return data ? data
+																		: "";
+															}
+														},
+														{
+															"data" : null,
+															"render" : function(
+																	data, type,
+																	row) {
+																return '<i title="View" class="fas fa-search view-icon" data-id="' + row.id + '"></i>';
+															}
+														},
+														{
+															"data" : null,
+															"render" : function(
+																	data, type,
+																	row) {
+																return '<i title="Delete" class="fas fa-trash delete-icon" data-id="' + row.id + '"></i>';
+															}
+														}, ]
+											});
+						});
+
+		$('#gameHistoryTable tbody').on('click', '.view-icon', function() {
+
+			var gameId = $(this).data('id');
+
+			// Extract _csrf token value and header name from meta tags
+			var csrfToken = $('meta[name=_csrf]').attr('content');
+			var csrfHeader = $('meta[name=_csrf_header]').attr('content');
+
+			// Create an object to hold the headers
+			var headers = {};
+			headers[csrfHeader] = csrfToken;
+
+			// Make a call to the backend to delete the corresponding record
+			$.ajax({
+				url : '/history/view/' + gameId,
+				type : 'POST',
+				headers : headers,
+				success : function() {
+					window.location.href = "/game/history";
 				},
-				"columns" : [ 
-				{
-	                "data": "date",
-	                "render": function(data) {
-	                    return moment(data).format("MM-DD-YYYY HH:mm:ss");
-	                }
-	            }, 
-				{
-					"data" : "blackPlayer.username"
-				}, 
-				{
-					"data" : "whitePlayer.username"
-				}, 
-				{
-	                "data": "winner.username",
-	                "render": function (data, type, row) {
-	                    return data ? data : "";
-	                }
-	            },
-				{
-	                "data": null,
-	                "render": function (data, type, row) {
-	                    return '<i title="View" class="fas fa-search view-icon" data-id="' + row.id + '"></i>';
-	                }
-	            },
-				{
-	                "data": null,
-	                "render": function (data, type, row) {
-	                    return '<i title="Delete" class="fas fa-trash delete-icon" data-id="' + row.id + '"></i>';
-	                }
-	            },
-				]
+				error : function() {
+					// Handle error if deletion fails
+					alert('Failed to view game with ID: ' + gameId);
+				}
 			});
 		});
-		
-	    $('#gameHistoryTable tbody').on('click', '.view-icon', function() {
-	    	 
-	        var gameId = $(this).data('id');
-	        
-	        // Extract _csrf token value and header name from meta tags
-	        var csrfToken = $('meta[name=_csrf]').attr('content');
-	        var csrfHeader = $('meta[name=_csrf_header]').attr('content');
-	        
-	        // Create an object to hold the headers
-	        var headers = {};
-	        headers[csrfHeader] = csrfToken;
-	        
-	        // Make a call to the backend to delete the corresponding record
-	        $.ajax({
-	            url: '/history/view/' + gameId,
-	            type: 'POST',
-	            headers: headers,
-	            success: function() {
-	                window.location.href = "/game/history";
-	            },
-	            error: function() {
-	                // Handle error if deletion fails
-	                alert('Failed to view game with ID: ' + gameId);
-	            }
-	        });
-	    });
-	    $('#gameHistoryTable tbody').on('click', '.delete-icon', function() {
-	    	 
-	        var gameId = $(this).data('id');
-	        
-	        // Extract _csrf token value and header name from meta tags
-	        var csrfToken = $('meta[name=_csrf]').attr('content');
-	        var csrfHeader = $('meta[name=_csrf_header]').attr('content');
-	        
-	        // Create an object to hold the headers
-	        var headers = {};
-	        headers[csrfHeader] = csrfToken;
-	        
-	        // Make a call to the backend to delete the corresponding record
-	        $.ajax({
-	            url: '/history/delete/' + gameId,
-	            type: 'DELETE',
-	            headers: headers,
-	            success: function() {
-	                // Remove the row from the DataTable upon successful deletion
-	                table.row($(this).parents('tr')).remove().draw();
-	                table.ajax.reload();
-	            },
-	            error: function() {
-	                // Handle error if deletion fails
-	                alert('Failed to delete game with ID: ' + gameId);
-	            }
-	        });
-	    });
+		$('#gameHistoryTable tbody').on('click', '.delete-icon', function() {
+
+			var gameId = $(this).data('id');
+
+			// Extract _csrf token value and header name from meta tags
+			var csrfToken = $('meta[name=_csrf]').attr('content');
+			var csrfHeader = $('meta[name=_csrf_header]').attr('content');
+
+			// Create an object to hold the headers
+			var headers = {};
+			headers[csrfHeader] = csrfToken;
+
+			// Make a call to the backend to delete the corresponding record
+			$.ajax({
+				url : '/history/delete/' + gameId,
+				type : 'DELETE',
+				headers : headers,
+				success : function() {
+					// Remove the row from the DataTable upon successful deletion
+					table.row($(this).parents('tr')).remove().draw();
+					table.ajax.reload();
+				},
+				error : function() {
+					// Handle error if deletion fails
+					alert('Failed to delete game with ID: ' + gameId);
+				}
+			});
+		});
 	</script>
 
 </body>
