--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,66 +1,50 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <meta charset="utf-8">
 <title>Gomoku</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/561a872f6a.js"
-	crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://kit.fontawesome.com/561a872f6a.js" crossorigin="anonymous"></script>
 <style>
-	.special {
-		padding-top: 50px;
-	}
+.special {
+	padding-top: 50px;
+}
 </style>
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid container">
-    <a class="navbar-brand" href="/">Gomoku</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Play
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/game/local">Local game</a></li>
-            <li><a class="dropdown-item" href="/game/ai">Against computer</a></li>
-            <li><a class="dropdown-item" href="/game/ai_vs_ai">Only computer</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/online">Online game</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/history}">History</a>
-        </li>
-        <li class="nav-item">
-        	<a class="nav-link" th:href="@{/settings}">
-				<em class="fas fa-gear"></em>
-			</a>
-		</li>
-      </ul>
-    </div>
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		<li class="nav-link" style="color: #0d6efd">
-			[[${username}]]
-		</li>
-	    <li class="nav-item" sec:authorize="isAuthenticated()">
-	    	<a class="nav-link" th:href="@{/logout}">
-				<em class="fas fa-sign-out"></em>
-			</a>
-	    </li>
-    </ul>
-  </div>
-</nav>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>	
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid container">
+			<a class="navbar-brand" href="/">Gomoku</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+						data-bs-toggle="dropdown" aria-expanded="false"> Play </a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="/game/local">Local game</a></li>
+							<li><a class="dropdown-item" href="/game/ai">Against computer</a></li>
+							<li><a class="dropdown-item" href="/game/ai_vs_ai">Only computer</a></li>
+						</ul></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/online}">Online</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/history}">History</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/settings}"> <em class="fas fa-gear"></em>
+					</a></li>
+				</ul>
+			</div>
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-link" style="color: #0d6efd">[[${username}]]</li>
+				<li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/logout}"> <em
+						class="fas fa-sign-out"></em>
+				</a></li>
+			</ul>
+		</div>
+	</nav>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
