switch to spring boot 3, add dockerfile-maven-plugin, several changes

--- a/src/main/resources/static/styles/online.css
+++ b/src/main/resources/static/styles/online.css
@@ -13,3 +13,17 @@
 .green {
 	color: green;
 }
+
+.center-icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.flex-container {
+	display: flex;
+}
+
+.table-wrapper {
+	margin-right: 20px; /* Optional: Add some spacing between the tables */
+}
