--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -21,6 +21,7 @@
 			<table id="gameHistoryTable" class="display">
 				<thead>
 					<tr>
+						<th>Name</th>
 						<th>Date</th>
 						<th>Black player</th>
 						<th>White player</th>
@@ -58,6 +59,9 @@
 													"dataSrc" : ""
 												},
 												"columns" : [
+														{
+															"data" : "name",
+														},
 														{
 															"data" : "date",
 															"render" : function(
