add display evaluation, add nginx server, add DTOs

--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -14,6 +14,10 @@
 					th:field="*{displayAnalysis}">
 			</div>
 			<div class="form-check">
+				<label class="form-check-label">Display evaluation</label> <input type="checkbox" class="form-check-input"
+					th:field="*{displayEvaluation}">
+			</div>
+			<div class="form-check">
 				<label class="form-check-label">Strike enabled</label> <input type="checkbox" class="form-check-input"
 					th:field="*{strikeEnabled}">
 			</div>
