--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -148,7 +148,7 @@
 		var boardSize = /*[[${game.boardSize}]]*/'default';
 		var evaluation = /*[[${evaluation}]]*/'default';
 		var isComputing = /*[[${isComputing}]]*/'default';
-		var webSocketEngineUrl = /*[[${webSocketEngineUrl}]]*/'default';
+		var engineUrl = /*[[${engineUrl}]]*/'default';
 		var username = /*[[${username}]]*/'default';
 		var _csrf = /*[[${_csrf}]]*/'default';
 		/*]]>*/
