Fix sso and other stuff

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -67,6 +67,10 @@
 						 </span>
 				</div>
 			</div>
+			<form action="/oauth2/authorization/external"
+			      method="get">
+			    <button class="btn btn-primary" type="submit">Login with SSO</button>
+			</form>
 		</div>
 	</div>
 </body>
