--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -67,10 +67,14 @@
 						 </span>
 				</div>
 			</div>
-			<form action="/oauth2/authorization/external"
-			      method="get">
-			    <button class="btn btn-primary" type="submit">Login with SSO</button>
-			</form>
+			<div class="form-floating"style="margin-top:15px">
+				<div class="row">
+					<form action="/oauth2/authorization/external"
+					      method="get">
+					    <button class="btn btn-primary" type="submit">Login with SSO</button>
+					</form>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
